--- a/Site/views/blender.sass
+++ b/Site/views/blender.sass
@@ -50,7 +50,7 @@ hr
 #demoright
   :float right
   h3
-    :text-align right
+    :text-align center
     :margin-right 5px
 p.inherited
   :color lighten(#3E4D5E,16%)
@@ -214,6 +214,10 @@ h1
   :padding 20px
   :position relative
   :width 920px
+.notice
+  :background-color #B64A00
+  :font-size 18px
+  :text-align center
 .class
   :width 760px
   
