--- a/Site/views/home.haml
+++ b/Site/views/home.haml
@@ -1,3 +1,5 @@
+.box.notice
+  This porject is still in development. Using it in production environment is not recommended.
 .startup.box
   .w
     %h1
@@ -9,8 +11,15 @@
         Blender 2.5
       GUI.
     %p
-      Uses Mootools and makes a have use of Class mutators and extensions.
+      Uses Mootools and makes a heavy use of Class mutators and extensions.
   .download
     Download: 1.0 RC
   .github
     Source at Github
+.box
+  %h1
+    Compability
+  %p
+    This project currently doesn't support IE due to an IE specific issue. It will be resolved in the first stable release.
+  %p
+    Chrome > 7, Firefox 3.6, Opera 11
