--- a/Themes/Blender/_color.sass
+++ b/Themes/Blender/_color.sass
@@ -1,12 +1,12 @@
-.color
+.#{$prefix}-color
   :width $width
   :min-width $minWidth
-  .blender-number, .blender-push-group
+  .#{$prefix}-number, .#{$prefix}-push-group
     :margin 5px 0
-  .wrapper
+  .#{$prefix}-color-wrapper
     :position relative
     :margin 10px 0
-  .xyknob
+  .#{$prefix}-color-xyknob
     :width 10px
     :cursor crosshair
     :height 10px
