--- a/Themes/Blender/_dialogs.sass
+++ b/Themes/Blender/_dialogs.sass
@@ -8,7 +8,7 @@
   :width $width
   :min-width $minWidth
 .dialog-alert
-  .blender-button
+  .#{$prefix}-button
     @extend .red-darker-gradient
     :color $colorLight
     &:hover
