--- a/Themes/Blender/_rules.sass
+++ b/Themes/Blender/_rules.sass
@@ -21,6 +21,8 @@ $border: darken($dark,8%)
 $border: darken($dark,20%)
 $borderRadius: 3px
 
+$prefix: blender
+
 .disabled
   :opacity 0.4    
     
