--- a/Site/views/docs.haml
+++ b/Site/views/docs.haml
@@ -8,18 +8,30 @@
       %h3
         Attributes
     .clear
+  - if @class.demo == nil
+    - @class.demo = {}
+    - @class.demo["children"] = []
   :javascript
     window.addEvent('domready',function(){
       el = new #{@class.name}()
       $('demoleft').adopt(el)
       a = #{@class.attributes.to_json}
+      children = #{@class.demo["children"].to_json}
+      children.each(function(item){
+        cls = eval(Object.keys(item)[0])
+        args = {}
+        Object.values(item)[0].each(function(it){
+          Object.merge(args,it)
+        })
+        el.addItem(new cls(args))
+      })
       Object.each(a,function(value,key){  
         if(value.show == undefined){
           type = value.dtype || value.type
           if(type == 'Select'){
             d = new Data.Select({editable:false})
             value.values.each(function(item){
-              d.addItem(new Iterable.ListItem({label:item,icon:'/Themes/Chrome/images/add.png',shortcut:'CTRL-S'}))
+              d.addItem(new Iterable.ListItem({label:item}))
             })
             d.addEvent('change',function(e,v){
               el.set(key,e);
